made changes to site

--- a/template-web-project/index.html
+++ b/template-web-project/index.html
@@ -7,7 +7,20 @@
 </head>
     
 <body>
-    
+    <h1>Goals for the semester</h1>
+    <h2>School</h2>
+    <ul>
+        <li>Code consistently</li>
+        <li>Learn R</li>
+        <li>Improve statistical reasoning skills</li>
+        <li>Become more skilled in JavaScript</li>
+    </ul>
+    <h2>Work</h2>
+    <ul>
+        <li>Get the next phases of the study up and running smoothly</li>
+        <li>Learn Vivosense and assist with coding of STF paradigm</li>
+        <li>Automate some systems so we can focus on subject recruitment</li>
+    </ul>
 </body>
 
 <script src="main.js"></script>
