--- a/template-web-project/index.html
+++ b/template-web-project/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>WEBSITE TITLE HERE</title>
+    <title>Fall 2023 goals</title>
     <link rel="stylesheet" type="text/css" href="./styles/style.css" media="screen" />
 </head>
     
