--- a/html-css-workshop/class-notes/html-workshop.html
+++ b/html-css-workshop/class-notes/html-workshop.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML/CSS Workshop</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <h1>Deiter Rams: 10 Commandments for Good Design</h1>
