started 2nd assignment - ugly website

--- a/html-css-workshop/ugly-site/index.html
+++ b/html-css-workshop/ugly-site/index.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <h1>Retro</h1>
+    <h2>Everything old is new again</h2>
+    <p>
+        Remember leggings
+    </p>
+    <img src="img/leggings.jpg" alt="">
+    <img src="img/80s-leggings.jpg" alt="">
+
 </body>
 </html>
