added images and updating styles

--- a/html-css-workshop/ugly-site/index.html
+++ b/html-css-workshop/ugly-site/index.html
@@ -8,12 +8,13 @@
 </head>
 <body>
     <h1>Retro</h1>
-    <h2>Everything old is new again</h2>
-    <p>
-        Remember leggings
-    </p>
+    <h2 class="tag-line">Everything old is new again</h2>
+    <h2 class="fashion">
+        Fashions
+    </h2>
     <img src="img/leggings.jpg" alt="">
     <img src="img/80s-leggings.jpg" alt="">
+    <img src="img/bell-bottom.jpg" alt="">
 
 </body>
 </html>
