--- a/html-css-workshop/ugly-site/index.html
+++ b/html-css-workshop/ugly-site/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ugly site</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Retro</h1>
+    <h1>R<span class="alter">e</span>t<span class="alter">r</span>o</h1>
     <h2 class="tag-line">Everything old is new again</h2>
     <h2 class="fashion">
-        Fashions
+        Fa<span class="change">shions</span>
     </h2>
     <img src="img/leggings.jpg" alt="">
     <img src="img/80s-leggings.jpg" alt="">
