added fashion pics and more styling

--- a/html-css-workshop/ugly-site/index.html
+++ b/html-css-workshop/ugly-site/index.html
@@ -12,9 +12,13 @@
     <h2 class="fashion">
         Fa<span class="change">shions</span>
     </h2>
-    <img src="img/leggings.jpg" alt="">
-    <img src="img/80s-leggings.jpg" alt="">
-    <img src="img/bell-bottom.jpg" alt="">
+    <p class="trends">Remember these trendy wears?</p>
+    <img class="pants one" src="img/leggings.jpg" alt="">
+    <img class="pants two" src="img/80s-leggings.jpg" alt="">
+    <img class="pants three" src="img/bell-bottom.jpg" alt="">
+    <br />
+    <h2>Tech<span class="update">no</span>logy</h2>
+    <p class="advance">Relive the cutting age technical advancements of the time</p>
 
 </body>
 </html>
