added more pics

--- a/html-css-workshop/ugly-site/index.html
+++ b/html-css-workshop/ugly-site/index.html
@@ -19,6 +19,15 @@
     <br />
     <h2>Tech<span class="update">no</span>logy</h2>
     <p class="advance">Relive the cutting age technical advancements of the time</p>
-
+    <img class="tech first" src="img/cell-phones.jpg" alt="">
+    <img class="tech second" src="img/computer.jpg" alt="">
+    <img class="tech third" src="img/tv.jpg" alt="">
+    <img class="tech fourth" src="img/walkman.jpg" alt="">
+    <br />
+    <h2><em>Transportat</em><span class="edit">ion</span></h2>
+    <p class="moment">Look at how modes of transportation has changed</p>
+    <img class="move primary" src="img/antique-car.jpg" alt="">
+    <img class="move secondary" src="img/car.jpg" alt="">
+    <img class="move tertiary" src="img/elevator.jpg" alt="">
 </body>
 </html>
