--- a/html-css-workshop/ugly-site/index.html
+++ b/html-css-workshop/ugly-site/index.html
@@ -29,5 +29,12 @@
     <img class="move primary" src="img/antique-car.jpg" alt="">
     <img class="move secondary" src="img/car.jpg" alt="">
     <img class="move tertiary" src="img/elevator.jpg" alt="">
+    <br />
+    <h2>Popular <span class="culture">Culture</span></h2>
+    <p class="real">Don't you just miss these old moments?</p>
+    <img class="pop-one" src="img/back-to-the-future.jpg" alt="">
+    <img class="pop-two" src="img/game.jpg" alt="">
+    <img class="pop-three" src="img/gigapet.jpg" alt="">
+    <img class="pop-four" src="img/trapper-keeper.jpg" alt="">
 </body>
 </html>
