--- a/html-css-workshop/ugly-site/index.html
+++ b/html-css-workshop/ugly-site/index.html
@@ -31,7 +31,7 @@
     <img class="move tertiary" src="img/elevator.jpg" alt="">
     <br />
     <h2>Popular <span class="culture">Culture</span></h2>
-    <p class="real">Don't you just miss these old moments?</p>
+    <p class="real">Don't you just miss these old moment, those simpler times?</p>
     <img class="pop-one" src="img/back-to-the-future.jpg" alt="">
     <img class="pop-two" src="img/game.jpg" alt="">
     <img class="pop-three" src="img/gigapet.jpg" alt="">
