--- a/html-css-workshop/css-sizing/index..html
+++ b/html-css-workshop/css-sizing/index..html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="outer-box">
-        <div class="inner-box"></div>
+    <div class="outer cont">
+        <div class="inner cont"></div>
     </div>
 </body>
 </html>
