--- a/assignment-2-css/index.html
+++ b/assignment-2-css/index.html
@@ -7,9 +7,34 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>CSS Layout Assignment</h1>
+    <nav class="navbar navbar-expand-md text-bg-success bg-opacity-50">
+        <div class="container-fluid">
+            <li class="nav-item"> 
+                <a class="text-dark nav-link" href="">Website.com</a>
+            </li>
+            <div class="d-flex justify-content-end fs-4 " id="navbarNav">
+                <ul class="nav nav-pills">
+                    <li class="nav-item">
+                        <a class="text-dark nav-link active text-bg-warning bg-opacity-100" aria-current="page"
+                            href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="text-dark nav-link" href="about.html">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="text-dark nav-link" href="more.html">More</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <h1 class="text-center bg-danger">CSS Layout Assignment</h1>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
 </body>
 </html>
