--- a/assignment-2-css/index.html
+++ b/assignment-2-css/index.html
@@ -11,15 +11,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-md text-bg-success bg-opacity-50">
+    <nav class="navbar navbar-expand-md">
         <div class="container-fluid">
-            <li class="nav-item"> 
                 <a class="text-dark nav-link" href="">Website.com</a>
-            </li>
             <div class="d-flex justify-content-end fs-4 " id="navbarNav">
                 <ul class="nav nav-pills">
                     <li class="nav-item">
-                        <a class="text-dark nav-link active text-bg-warning bg-opacity-100" aria-current="page"
+                        <a class="text-danger text-bg-light nav-link active" aria-current="page"
                             href="#">Home</a>
                     </li>
                     <li class="nav-item">
