--- a/assignment-2-css/more.html
+++ b/assignment-2-css/more.html
@@ -13,25 +13,46 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-md">
-        <div class="container-fluid">
-            <a class="text-dark nav-link" href="">Website.com</a>
-            <div class="d-flex justify-content-end fs-4 " id="navbarNav">
-                <ul class="nav nav-pills">
-                    <li class="nav-item">
-                        <a class="text-dark nav-link" aria-current="page" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="text-dark nav-link" href="about.html">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="text-danger text-bg-light nav-link active" href="#">More</a>
-                    </li>
-                </ul>
+    <div>
+        <nav class="navbar navbar-expand-md">
+            <div class="container-fluid">
+                <a class="text-dark nav-link" href="">Website.com</a>
+                <div class="d-flex justify-content-end fs-4 " id="navbarNav">
+                    <ul class="nav nav-pills">
+                        <li class="nav-item">
+                            <a class="text-dark nav-link" aria-current="page" href="index.html">home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="text-dark nav-link" href="about.html">about</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="text-danger text-bg-light nav-link active" href="#">more</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </div>
+    <div class="left-container"></div>
+    <div class="right-container"></div>
+    <div class="container text-center">
+        <div class="row row-cols-2">
+            <div class="col-6 change">Website.com</div>
+            <div class="col-6 background">
+                Website of the Year
+                <p class="edit-margin">
+                    According to to <strong>everyone</strong>. If you don't believe it, then <span>you just don't get
+                        it.</span>
+                </p>
+                <p class="edit-margin">
+                    Sample text Sample text Sample text Sample text Sample text Sample text Sample text Sample text Sample
+                    text Sample text Sample text Sample text Sample text Sample text Sample text Sample text Sample text
+                    Sample text Sample text Sample text Sample text Sample text Sample text Sample text Sample text Sample
+                    text
+                </p>
             </div>
         </div>
-    </nav>
-    <h1 class="text-center bg-danger">CSS Layout Assignment</h1>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
