--- a/hypertext-narrative/index.html
+++ b/hypertext-narrative/index.html
@@ -15,7 +15,7 @@
     <svg width="1234" height="667" viewBox="0 0 1234 667" fill="none" xmlns="http://www.w3.org/2000/svg"
         xmlns:xlink="http://www.w3.org/1999/xlink">
         <rect width="1234" height="667" fill="#F5F5F5" />
-        <rect id="Rectangle 1" width="1234" height="667" fill="url(#pattern0)" />
+        <rect id="Rectangle-one" width="1234" height="667" fill="url(#pattern0)" />
         <defs>
             <pattern id="pattern0" patternContentUnits="objectBoundingBox" width="1" height="1">
                 <use xlink:href="#image0_0_1" transform="matrix(0.00125 0 0 0.00231259 0 -0.123244)" />
