--- a/hypertext-narrative/index.html
+++ b/hypertext-narrative/index.html
@@ -12,6 +12,19 @@
 <body>
    <div>
     <h1>Pluto: A Fall From Grace</h1>
+    <p>Pluto Biography</p>
+    <ul>
+        <li>Discovered on: 02/18/1930</li>
+        <li>Discovered by: Clyde Tombaugh</li>
+        <li>Distance from sun: 3.7 billion miles</li>
+        <li>Rotation period: ~153 hours</li>
+        <li>Revolution period: ~248 years</li>
+        <li>Radius: 715 miles</li>
+        <li>No. of moons: 5 (Charon, Nix, Hydra, Kerberos, Styx)</li>
+        <li>Rings: none</li>
+        <li>Named for: Roman god of the underworld</li>
+        <li>Year booted from the planet fraternity: 2006</li>
+    </ul>
     <svg width="1234" height="667" viewBox="0 0 1234 667" fill="none" xmlns="http://www.w3.org/2000/svg"
         xmlns:xlink="http://www.w3.org/1999/xlink">
         <rect width="1234" height="667" fill="#F5F5F5" />
