got the text overlay to work

--- a/hypertext-narrative/index.html
+++ b/hypertext-narrative/index.html
@@ -12,9 +12,9 @@
 <body>
    <div>
     <h1>Pluto: A Fall From Grace</h1>
-    <p>Pluto Biography</p>
-    <div class="containerBox">
-        <div class="text-box">
+    <div class="container">
+        <div class="top-left">
+            <p>Biography</p>
             <ul>
                 <li>Discovered on: 02/18/1930</li>
                 <li>Discovered by: Clyde Tombaugh</li>
