--- a/hypertext-narrative/index.html
+++ b/hypertext-narrative/index.html
@@ -3,15 +3,16 @@
 
 <head>
     <title>Hypertext narrative</title>
-    <link rel="stylesheet" type="text/css" href="styles/style.css" media="screen" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Allura&family=Oleo+Script&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="styles/style.css" media="screen" />
 </head>
     
 <body>
    <div>
-    <h1>Pluto: A Fall From Grace</h1>
+    <h1 class="pt-3">Pluto: A Fall From Grace</h1>
     <div class="container">
         <div class="top-left">
             <p>Biography</p>
@@ -44,6 +45,7 @@
     
 </body>
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 <script src="scripts/main.js"></script>
 
 </html> 
