completed JS lesson and added pluto facts link and status now

--- a/hypertext-narrative/index.html
+++ b/hypertext-narrative/index.html
@@ -15,7 +15,9 @@
     <h1 class="pt-3">Pluto: A Fall From Grace</h1>
     <div class="container">
         <div class="top-left">
-            <p>Biography</p>
+            <p>
+                <a href="https://solarsystem.nasa.gov/planets/dwarf-planets/pluto/in-depth/#:~:text=With%20a%20radius%20of%20715,units%20away%20from%20the%20Sun.">Biography</a>
+                </p>
             <ul>
                 <li>Discovered on: 02/18/1930</li>
                 <li>Discovered by: Clyde Tombaugh</li>
@@ -27,6 +29,7 @@
                 <li>Rings: none</li>
                 <li>Named for: Roman god of the underworld</li>
                 <li>Year booted from the planet fraternity: 2006</li>
+                <li>Official classification: Dwarf Planet</li>
             </ul>
         </div>
         <svg width="1234" height="667" viewBox="0 0 1234 667" fill="none" xmlns="http://www.w3.org/2000/svg"
