was able to get the biography to scroll left
Ideally want it to scroll top to bottom

--- a/hypertext-narrative/index.html
+++ b/hypertext-narrative/index.html
@@ -16,10 +16,11 @@
     <div class="container">
         <div class="top-left">
             <p>
-                <a href="https://solarsystem.nasa.gov/planets/dwarf-planets/pluto/in-depth/#:~:text=With%20a%20radius%20of%20715,units%20away%20from%20the%20Sun.">Biography</a>
+                <a class="move-this" href="https://solarsystem.nasa.gov/planets/dwarf-planets/pluto/in-depth/#:~:text=With%20a%20radius%20of%20715,units%20away%20from%20the%20Sun.">Biography</a>
                 </p>
-            <ul>
-                <li>Discovered on: 02/18/1930</li>
+                <br>
+            <ul class="moving-parts">
+                <li >Discovered on: 02/18/1930</li>
                 <li>Discovered by: Clyde Tombaugh</li>
                 <li>Distance from sun: 3.7 billion miles</li>
                 <li>Rotation period: ~153 hours</li>
