--- a/hypertext-narrative/index.html
+++ b/hypertext-narrative/index.html
@@ -14,25 +14,27 @@
    <div>
     <h1 class="pt-3">Pluto: A Fall From Grace</h1>
     <div class="container">
-        <div class="top-left">
-            <p>
-                <a class="move-this" href="https://solarsystem.nasa.gov/planets/dwarf-planets/pluto/in-depth/#:~:text=With%20a%20radius%20of%20715,units%20away%20from%20the%20Sun.">Biography</a>
-                </p>
-                <br>
-            <ul class="moving-parts">
-                <li >Discovered on: 02/18/1930</li>
-                <li>Discovered by: Clyde Tombaugh</li>
-                <li>Distance from sun: 3.7 billion miles</li>
-                <li>Rotation period: ~153 hours</li>
-                <li>Revolution period: ~248 years</li>
-                <li>Radius: 715 miles</li>
-                <li>No. of moons: 5 (Charon, Nix, Hydra, Kerberos, Styx)</li>
-                <li>Rings: none</li>
-                <li>Named for: Roman god of the underworld</li>
-                <li>Year booted from the planet fraternity: 2006</li>
-                <li>Official classification: Dwarf Planet</li>
-            </ul>
-        </div>
+        <div class="extra-box">
+            <div class="top-left">
+                <p>
+                    <a class="move-this" href="https://solarsystem.nasa.gov/planets/dwarf-planets/pluto/in-depth/#:~:text=With%20a%20radius%20of%20715,units%20away%20from%20the%20Sun.">Biography</a>
+                    </p>
+                    <br>
+                <ul class="moving-parts">
+                    <li >Discovered on: 02/18/1930</li>
+                    <li>Discovered by: Clyde Tombaugh</li>
+                    <li>Distance from sun: 3.7 billion miles</li>
+                    <li>Rotation period: ~153 hours</li>
+                    <li>Revolution period: ~248 years</li>
+                    <li>Radius: 715 miles</li>
+                    <li>No. of moons: 5 (Charon, Nix, Hydra, Kerberos, Styx)</li>
+                    <li>Rings: none</li>
+                    <li>Named for: Roman god of the underworld</li>
+                    <li>Year booted from the planet fraternity: 2006</li>
+                    <li>Official classification: Dwarf Planet</li>
+                </ul>
+            </div>
+        </div> 
         <svg width="1234" height="667" viewBox="0 0 1234 667" fill="none" xmlns="http://www.w3.org/2000/svg"
             xmlns:xlink="http://www.w3.org/1999/xlink">
             <rect width="1234" height="667" fill="#F5F5F5" />
