--- a/hypertext-narrative/index.html
+++ b/hypertext-narrative/index.html
@@ -16,10 +16,9 @@
     <div class="container">
         <div class="extra-box">
             <div class="top-left">
-                <p>
+                <p class="mb-2">
                     <a class="move-this" href="https://solarsystem.nasa.gov/planets/dwarf-planets/pluto/in-depth/#:~:text=With%20a%20radius%20of%20715,units%20away%20from%20the%20Sun.">Biography</a>
-                    </p>
-                    <br>
+                </p>
                 <ul class="moving-parts">
                     <li >Discovered on: 02/18/1930</li>
                     <li>Discovered by: Clyde Tombaugh</li>
