--- a/hypertext-narrative/index.html
+++ b/hypertext-narrative/index.html
@@ -99,7 +99,7 @@
 </body>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-<script type="text/javascript" src="/jquery/jquery-3.6.0.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> <!--imports the jQuery library - must run this before running JS file name-->
 <script src="scripts/main.js"></script>
 
 </html> 
