trying to get the flexbox and scrolly telling working
not sure if I should be styling the svg or the section class="graphic"

--- a/hypertext-narrative/index.html
+++ b/hypertext-narrative/index.html
@@ -14,12 +14,12 @@
 <body>
         <h1 class="pt-3">Pluto: A Fall From Grace</h1>
         <div id="scrolly">
-            <section class="text-holder">
-                    <p class="mb-2">
+            <section class="text-holder ms-4">
+                    <p class="scroll-step">
                         <a class="move-this"
                             href="https://solarsystem.nasa.gov/planets/dwarf-planets/pluto/in-depth/#:~:text=With%20a%20radius%20of%20715,units%20away%20from%20the%20Sun.">Biography</a>
                     </p>
-                    <ul class="moving-parts">
+                    <ul>
                         <li>Discovered on: 02/18/1930</li>
                         <li>Discovered by: Clyde Tombaugh</li>
                         <li>Distance from sun: 3.7 billion miles</li>
@@ -33,11 +33,11 @@
                         <li>Official classification: Dwarf Planet</li>
                     </ul>
             </section>
-            <section class="text-holder">
-               <p>
+            <section class="text-holder pt-4 ms-4" >
+               <p class="scroll-step">
                     <a href="https://hellopoetry.com/words/pluto/ ">Pluto's Plight</a>
                 </p>
-                <p class="change-font">
+                <p>
                     Tell me Pluto,
                     how does it feel
                     to be told you’re a planet for years
