trying to get scroll telling working - still not working

--- a/hypertext-narrative/index.html
+++ b/hypertext-narrative/index.html
@@ -19,7 +19,7 @@
                         <a class="move-this"
                             href="https://solarsystem.nasa.gov/planets/dwarf-planets/pluto/in-depth/#:~:text=With%20a%20radius%20of%20715,units%20away%20from%20the%20Sun.">Biography</a>
                     </p>
-                    <ul>
+                    <ul class="data-size="50"">
                         <li>Discovered on: 02/18/1930</li>
                         <li>Discovered by: Clyde Tombaugh</li>
                         <li>Distance from sun: 3.7 billion miles</li>
@@ -37,7 +37,7 @@
                <p class="scroll-step">
                     <a href="https://hellopoetry.com/words/pluto/ ">Pluto's Plight</a>
                 </p>
-                <p>
+                <p class="data-size="50">
                     Tell me Pluto,
                     how does it feel
                     to be told you’re a planet for years
@@ -97,9 +97,8 @@
                 </defs>
             </svg>
         </section>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-        <!--imports the jQuery library - must run this before running JS file name-->
+        <script src="https://unpkg.com/intersection-observer"></script>
+        <script src="https://unpkg.com/scrollama"></script>
         <script src="scripts/main.js"></script>
 </body>
 
