trying to get scrolly telling working

--- a/hypertext-narrative/index.html
+++ b/hypertext-narrative/index.html
@@ -15,11 +15,11 @@
         <h1 class="pt-3">Pluto: A Fall From Grace</h1>
         <div id="scrolly">
             <section class="text-holder ms-4">
-                    <p class="scroll-step">
-                        <a class="move-this"
+                    <p class="scroll-step" data-size="50">
+                        <a class=" scroll-step move-this"
                             href="https://solarsystem.nasa.gov/planets/dwarf-planets/pluto/in-depth/#:~:text=With%20a%20radius%20of%20715,units%20away%20from%20the%20Sun.">Biography</a>
                     </p>
-                    <ul class="data-size="50"">
+                    <ul class="scroll-step" data-size="50">
                         <li>Discovered on: 02/18/1930</li>
                         <li>Discovered by: Clyde Tombaugh</li>
                         <li>Distance from sun: 3.7 billion miles</li>
@@ -35,9 +35,9 @@
             </section>
             <section class="text-holder pt-4 ms-4" >
                <p class="scroll-step">
-                    <a href="https://hellopoetry.com/words/pluto/ ">Pluto's Plight</a>
+                    <a class="scroll-step" data-size="50" href="https://hellopoetry.com/words/pluto/ ">Pluto's Plight</a>
                 </p>
-                <p class="data-size="50">
+                <p class="scroll-step" data-size="50">
                     Tell me Pluto,
                     how does it feel
                     to be told you’re a planet for years
@@ -84,7 +84,7 @@
             </section>    
         </div>
         <section class="graphic">
-            <svg width="1234" height="667" viewBox="0 0 1234 667" fill="none" xmlns="http://www.w3.org/2000/svg"
+            <svg class="ball" width="1234" height="667" viewBox="0 0 1234 667" fill="none" xmlns="http://www.w3.org/2000/svg"
                 xmlns:xlink="http://www.w3.org/1999/xlink">
                 <rect width="1234" height="667" fill="#F5F5F5" />
                 <rect id="Rectangle-one" width="1234" height="667" fill="url(#pattern0)" />
