--- a/hypertext-narrative/poem-test.html
+++ b/hypertext-narrative/poem-test.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Allura&family=Oleo+Script&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="styles/style.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="styles/style-test.css" media="screen" />
 </head>
 <body>
     <div class="image-container ball">
