edited the position of some links

--- a/hypertext-narrative/poem.html
+++ b/hypertext-narrative/poem.html
@@ -19,11 +19,11 @@
         <div class="overlay-text scroll-step pe-5">
             <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
                 <ol class="breadcrumb">
-                    <li class="breadcrumb-item mb-5"><a href="index.html">Home</a></li>
+                    <li class="breadcrumb-item freeze-tag"><a href="index.html">Home</a></li>
                 </ol>
             </nav>
             <section class="scrolly">
-                <h3 class="mb-3" data-size="50">
+                <h3 class="mb-3 mt-5" data-size="50">
                     <a data-size="50" href="https://hellopoetry.com/words/pluto/ ">Pluto's Plight</a>
                 </h3>
                 <p data-size="50">
