changed transition speed and width and other style changes

--- a/hypertext-narrative/index.html
+++ b/hypertext-narrative/index.html
@@ -13,11 +13,11 @@
 </head>
 <body>
     <div class="image-container">
-        <img src="https://www.mozaweb.com/en/mozaik3D/FOL/altalanos/pluto/960.jpg" alt="Pluto">
+        <img src="https://www.mozaweb.com/en/mozaik3D/FOL/altalanos/pluto/960.jpg" class="style-pic" alt="Pluto">
         <div class="overlay-text">
             <h1 class="hero">Pluto: A Fall From Grace</h1>
             <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
-                <ol class="breadcrumb">
+                <ol class="breadcrumb frost-tag">
                     <li class="breadcrumb-item"><a href="bio.html">Biography</a></li>
                     <li class="breadcrumb-item active"><a href="poem.html">Poem</a></li>
                 </ol>
