got the text to lay properly on home page
used transform: translate(5%, -75%);
all text visible on screen - don't have to scroll down
renamed files

--- a/hypertext-narrative/index.html
+++ b/hypertext-narrative/index.html
@@ -9,12 +9,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Allura&family=Oleo+Script&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="styles/style.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="styles/style-home.css" media="screen" />
 </head>
 <body>
-    <div class="image-container">
+    <div class="image-container adjust-pic">
         <img src="https://www.mozaweb.com/en/mozaik3D/FOL/altalanos/pluto/960.jpg" class="style-pic" alt="Pluto">
-        <div class="overlay-text">
+        <div class="overlay-text stretch-text">
             <h1 class="hero">Pluto: A Fall From Grace</h1>
             <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
                 <ol class="breadcrumb frost-tag">
