moved the home link to bottom of poem and removed unsued code
the home tab would disappear sometimes when it was at the top - move to the bottom so the user can always access it

--- a/hypertext-narrative/poem.html
+++ b/hypertext-narrative/poem.html
@@ -17,11 +17,6 @@
             alt="solar-system with missing Pluto">
     </div>
         <div class="overlay-text scroll-step pe-5 stretch-text">
-            <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
-                <ol class="breadcrumb">
-                    <li class="breadcrumb-item freeze-tag"><a href="index.html">Home</a></li>
-                </ol>
-            </nav>
             <section class="scrolly">
                 <h3 class="mb-3" data-size="50">
                     <a data-size="50" href="https://hellopoetry.com/words/pluto/ ">Pluto's Plight</a>
@@ -71,6 +66,11 @@
                     to suffer in your loneliness.
                 </p>
             </section>
+            <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
+                <ol class="breadcrumb mt-5">
+                    <li class="breadcrumb-item freeze-tag"><a href="index.html">Home</a></li>
+                </ol>
+            </nav>
         </div>
     <script src="https://unpkg.com/intersection-observer"></script>
     <script src="https://unpkg.com/scrollama"></script>
