--- a/hypertext-narrative/poem.html
+++ b/hypertext-narrative/poem.html
@@ -19,7 +19,7 @@
         <div class="overlay-text scroll-step pe-5 stretch-text">
             <section class="scrolly">
                 <h3 class="mb-3" data-size="50">
-                    <a data-size="50" href="https://hellopoetry.com/words/pluto/ ">Pluto's Plight</a>
+                    <a data-size="50" href="https://hellopoetry.com/words/pluto/ " target="_blank">Pluto's Plight</a>
                 </h3>
                 <p data-size="50">
                     Tell me Pluto,
