--- a/template-web-project-2/index.html
+++ b/template-web-project-2/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <h1>Adding elements via JavaScript</h1>
+    <div class="container">
+        <h1>Adding elements via JavaScript</h1>
+    </div>
     <script src="scripts/main.js"></script>
 </body>
 </html>
