--- a/p5 template/index-color.html
+++ b/p5 template/index-color.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>p5.js Template</title>
+    <title>p5.js Colored shapes</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
 
