--- a/p5 template/index-hw.html
+++ b/p5 template/index-hw.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>p5.js Template</title>
+    <title>p5.js HW</title>
     <link rel="stylesheet" type="text/css" href="./styles/style.css" media="screen" />
 </head>
 
