--- a/p5 template/index-snake.html
+++ b/p5 template/index-snake.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>p5.js Shapes spaced</title>
+    <title>p5.js Template</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
 
@@ -18,6 +18,6 @@
 
 <!-- loads p5.js library from the web, place before my main.js file-->
 <script src="https://cdn.jsdelivr.net/npm/p5@1.4.2/lib/p5.js"></script>
-<script src="./scripts/main-shapes2.js"></script>
+<script src="./scripts/main-snake.js"></script>
 
 </html>
