--- a/p5 template/index-star-twinkle.html
+++ b/p5 template/index-star-twinkle.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>p5.js Noise example</title>
+    <title>p5.js Star Twinkle</title>
     <link rel="stylesheet" type="text/css" href="./styles/style.css" media="screen" />
 </head>
 
@@ -18,6 +18,6 @@
 
 <!-- loads p5.js library from the web, place before my main.js file-->
 <script src="https://cdn.jsdelivr.net/npm/p5@1.4.2/lib/p5.js"></script>
-<script src="./scripts/main-noise-wave.js"></script>
+<script src="./scripts/main-star-twinkle.js"></script>
 
 </html>
