--- a/p5 template/index-noise3d.html
+++ b/p5 template/index-noise3d.html
@@ -2,13 +2,13 @@
 <html>
 
 <head>
-    <title>p5.js Noise example</title>
+    <title>p5.js Noise 3D example</title>
 </head>
 
 <body>
 
     <main>
-        <h2>p5.js Sketch</h2>
+        <h2>p5.js Noise 3D example</h2>
         <!-- p5 will place a canvas in any 'main' element by default
     if you don't have a main element it will create one -->
     </main>
