--- a/p5 template/index-parameters.html
+++ b/p5 template/index-parameters.html
@@ -2,14 +2,14 @@
 <html>
 
 <head>
-    <title>p5.js Noise example</title>
+    <title>p5.js Noise parameters</title>
     <link rel="stylesheet" type="text/css" href="./styles/style.css" media="screen" />
 </head>
 
 <body>
 
     <main>
-        <h2>p5.js Sketch</h2>
+        <h2>p5.js Noise parameters ex</h2>
         <!-- p5 will place a canvas in any 'main' element by default
     if you don't have a main element it will create one -->
     </main>
