--- a/p5 template/index-shapes2.html
+++ b/p5 template/index-shapes2.html
@@ -9,7 +9,7 @@
 <body>
 
     <main>
-        <h2>p5.js Sketch</h2>
+        <h2>p5.js Shapes 2 ex</h2>
         <!-- p5 will place a canvas in any 'main' element by default
     if you don't have a main element it will create one -->
     </main>
