added the background image and am doing the home page

--- a/expressive-web/index.html
+++ b/expressive-web/index.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <a href="home.html" class="home-link">Home</a>
+    <div>
+        <img src="images/F-train.jpg" alt="Old F-train">
+    </div>
+    <div>
+        <h1>
+            
+        </h1>
+    </div>
     <main>
 
     </main>
