--- a/expressive-web/home.html
+++ b/expressive-web/home.html
@@ -10,6 +10,8 @@
 
 <body>
     <h1>A deeper look at your commute</h1>
+    <p>What kind of commuter are you? Are you the type to disappear into your thoughts, imagining you were a world away from your current location? Are you drowning out the noise via music and podcasts? Are you hoping to be invisible, avoiding any eye-contact with others as you hope for an uneventful journey? Are you constantly stressed, just waiting for the MTA to ruin your day with the inevitable "train traffic ahead"?</p>
+    <p>But what if you stopped to really think about your commute? </p>
     <a href="index.html">Think about your commute differently</a>
 
     <main>
