trying to get the home link to show up on the image

--- a/expressive-web/home.html
+++ b/expressive-web/home.html
@@ -11,7 +11,7 @@
 <body>
     <h1>A deeper look at your commute</h1>
     <p>What kind of commuter are you? Are you the type to disappear into your thoughts, imagining you were a world away from your current location? Are you drowning out the noise via music and podcasts? Are you hoping to be invisible, avoiding any eye-contact with others as you hope for an uneventful journey? Are you constantly stressed, just waiting for the MTA to ruin your day with the inevitable "train traffic ahead"?</p>
-    <p>But what if you stopped to really think about your commute? </p>
+    <p>But what if you stopped to really think about your commute? Amid the drudgery of trekking to and fro, do you ever stop and wonder what you might be missing along the way.</p>
     <a href="index.html">Think about your commute differently</a>
 
     <main>
