removed div container b/c it added too much whitespace

--- a/expressive-web/index.html
+++ b/expressive-web/index.html
@@ -9,20 +9,21 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="body-tag">
-    <div>
+    <a href="home.html" class="home-link">Home</a>
+    <!-- <div>
         <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
             <ol class="breadcrumb">
-                <li class="breadcrumb-item active freeze-tag home-link"><a href="home.html">Home</a></li>
+                <li class="breadcrumb-item active freeze-tag"><a href="home.html" class="home-link">Home</a></li>
             </ol>
         </nav>
-    </div>
+    </div> -->
     <div>
         <img src="images/F-train.jpg" alt="Old F-train">
     </div>
-    <div>
-        <h1>
-            
-        </h1>
+    <div class="container">
+        <h4>
+            179th Street
+        </h4>
     </div>
     <main>
 
