--- a/expressive-web/index.html
+++ b/expressive-web/index.html
@@ -17,7 +17,7 @@
             </ol>
         </nav>
     </div> -->
-    <div>
+    <div class="rocks">
         <img src="images/F-train.jpg" alt="Old F-train">
     </div>
     <div class="container">
