--- a/expressive-web/index-orig.html
+++ b/expressive-web/index-orig.html
@@ -18,8 +18,7 @@
         </nav>
     </div> -->
     <div class="rocks">
-        <!-- <img src="images/F-train.jpg" class="train-pic" alt="Old F-train"> -->
-        <img src="images/mtaftrain-edit.png" class="train-path" alt="f-train path">
+        <img src="images/F-train.jpg" alt="Old F-train">
     </div>
     <div class="container">
         <h4>
