fixed the stroke weight on ship
also added some shapes to the expressive web - have to create a single thick line that goes all the way down to help

--- a/expressive-web/index.html
+++ b/expressive-web/index.html
@@ -10,26 +10,30 @@
 </head>
 <body class="body-tag">
     <a href="home.html" class="home-link">Home</a>
-    <!-- <div>
-        <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
-            <ol class="breadcrumb">
-                <li class="breadcrumb-item active freeze-tag"><a href="home.html" class="home-link">Home</a></li>
-            </ol>
-        </nav>
-    </div> -->
     <div class="rocks">
         <!-- <img src="images/F-train.jpg" class="train-pic" alt="Old F-train"> -->
         <img src="images/mtaftrain-edit.png" class="train-path" alt="f-train path">
     </div>
-    <div class="container">
-        <h4>
-            179th Street
-        </h4>
-    </div>
     <main>
-
+        <div class="container mt-5">
+            <h5>179th Street</h5>
+            <h5>169th Street</h5>
+            <h5>Parsons Blvd</h5>
+            <h5>Sutphin Blvd</h5>
+            <h5>Briarwood-Van Wyck Blvd</h5>
+            <h5>Kew Gardens-Union Tpke</h5>
+            <h5>75th Ave</h5>
+            <h5>71st Ave-Forest Hills</h5>
+            <h5>Jackson Heights-Roosevelt Ave</h5>
+            <h5>21st Street-Queensbridge</h5>
+            <h5>Roosevelt Island</h5>
+            <h5>Lexington Ave-63rd Street</h5>
+            <h5>57th Street</h5>
+            <h5>47-50th Street Rockefeller Center</h5>
+            <h5>42nd Street-Bryant Park</h5>
+            <h5>34th Street-Herald Square</h5>
+        </div>
     </main>
-
 </body>
 <script src="https://cdn.jsdelivr.net/npm/p5@1.4.2/lib/p5.js"></script>
 <script src="script.js"></script>
