started the table

--- a/expressive-web/index.html
+++ b/expressive-web/index.html
@@ -16,6 +16,28 @@
     </div>
     <main>
         <div class="container mt-5">
+            <p>Table with colgroup and col</p>
+            <table class="mb-5 table-bordered text-wrap table-responsive">
+                <colgroup>
+                    <col span="2" />
+                </colgroup>
+                <tr>
+                    <th>Station</th>
+                    <th>Sight</th>
+                    <th>Site</th>
+                </tr>
+                <tr>
+                    <td>179th Street</td>
+                    <td>
+                        Major Mark Park 
+                        Detective Keith L. Williams Park
+                        Cunningham Park
+                    </td>
+                    <td><a href="https://www.nycgovparks.org/parks/major-mark-park">Site</a></td>
+                </tr>
+            </table>
+
+
             <h5>179th Street</h5>
             <h5>169th Street</h5>
             <h5>Parsons Blvd</h5>
