added first row of table
doesn't look great - the formatting needs work - would want the pictures to line up with the names

--- a/expressive-web/index.html
+++ b/expressive-web/index.html
@@ -23,22 +23,35 @@
                 </colgroup>
                 <tr>
                     <th>Station</th>
-                    <th>Sight</th>
-                    <th>Site</th>
+                    <th class="text-center">Sight</th>
+                    <th class="text-center">Site</th>
                 </tr>
                 <tr>
                     <td>179th Street</td>
                     <td>
+                        
                         Major Mark Park 
                         Detective Keith L. Williams Park
                         Cunningham Park
                     </td>
-                    <td><a href="https://www.nycgovparks.org/parks/major-mark-park">Site</a></td>
+                    <td>
+                        <a href="https://www.nycgovparks.org/parks/major-mark-park">
+                            <img src="https://lh3.googleusercontent.com/p/AF1QipNJp6YDtg7g6wvlRmZz6AjoUwZ2F6Nck945vA3t=s1360-w1360-h1020"
+                            class="w-25 h-25" alt="" />
+                        </a>
+                        <a href="https://www.nycgovparks.org/parks/detective-keith-l-williams-park-liberty-park/">
+                            <img src="https://static.nycgovparks.org/images/photo_gallery/full_size/24287.jpg"
+                                class="w-25 h-25" alt="" />
+                        </a>
+                        <a href="https://www.nycgovparks.org/parks/cunningham-park">
+                            <img src="https://static.nycgovparks.org/images/photo_gallery/full_size/23030.jpg" class="w-25 h-25" alt="" />
+                        </a>
+                        </td>
                 </tr>
             </table>
 
 
-            <h5>179th Street</h5>
+
             <h5>169th Street</h5>
             <h5>Parsons Blvd</h5>
             <h5>Sutphin Blvd</h5>
