--- a/expressive-web/index.html
+++ b/expressive-web/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Travel</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
@@ -16,20 +16,18 @@
     </div>
     <main>
         <div class="container mt-5">
-            <p>Table with colgroup and col</p>
             <table class="mb-5 table-bordered text-wrap table-responsive">
                 <colgroup>
                     <col span="2" />
                 </colgroup>
-                <tr>
+                <tr class="text-center">
                     <th>Station</th>
-                    <th class="text-center">Sight</th>
-                    <th class="text-center">Site</th>
+                    <th>Sight</th>
+                    <th>Site</th>
                 </tr>
                 <tr>
                     <td>179th Street</td>
                     <td>
-                        
                         Major Mark Park 
                         Detective Keith L. Williams Park
                         Cunningham Park
@@ -46,7 +44,7 @@
                         <a href="https://www.nycgovparks.org/parks/cunningham-park">
                             <img src="https://static.nycgovparks.org/images/photo_gallery/full_size/23030.jpg" class="w-25 h-25" alt="" />
                         </a>
-                        </td>
+                    </td>
                 </tr>
             </table>
 
