commented out code

--- a/expressive-web/index.html
+++ b/expressive-web/index.html
@@ -100,7 +100,7 @@
             </table>
 
 
-
+            <!-- <h5>179th Street</h5>
             <h5>169th Street</h5>
             <h5>Parsons Blvd</h5>
             <h5>Sutphin Blvd</h5>
@@ -115,7 +115,7 @@
             <h5>57th Street</h5>
             <h5>47-50th Street Rockefeller Center</h5>
             <h5>42nd Street-Bryant Park</h5>
-            <h5>34th Street-Herald Square</h5>
+            <h5>34th Street-Herald Square</h5> -->
         </div>
     </main>
 </body>
