removed background from the image

--- a/expressive-web/index.html
+++ b/expressive-web/index.html
@@ -12,7 +12,7 @@
     <a href="home.html" class="home-link">Home</a>
     <div class="rocks">
         <!-- <img src="images/F-train.jpg" class="train-pic" alt="Old F-train"> -->
-        <img src="images/mtaftrain-edit.png" class="train-path" alt="f-train path">
+        <img src="images/mtaftrain-edit-removebg-preview.png" class="train-path" alt="f-train path">
     </div>
     <main>
         <div class="stations">
