--- a/expressive-web/index.html
+++ b/expressive-web/index.html
@@ -729,6 +729,9 @@
         </div>
     </main>
 </body>
+<script src="https://unpkg.com/intersection-observer@0.5.1/intersection-observer.js"></script>
+<script src="https://unpkg.com/scrollama"></script>
+<script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
 <script src="https://cdn.jsdelivr.net/npm/p5@1.4.2/lib/p5.js"></script>
 <script src="script.js"></script>
 </html>
