trying to get scroll step to work

--- a/expressive-web/index.html
+++ b/expressive-web/index.html
@@ -8,16 +8,16 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
-<body class="body-tag">
+<body>
     <a href="home.html" class="home-link">Home</a>
-    <div class="rocks">
-        <!-- <img src="images/F-train.jpg" class="train-pic" alt="Old F-train"> -->
+    <div class="image-container route">
+        <img src="images/F-train.jpg" class="train-pic" alt="">
         <img src="images/mtaftrain-edit-removebg-preview.png" class="train-path" alt="f-train path">
     </div>
-    <div class="scroll-step">
-        <section id="scrolly">
-            <div class="stations">
-                <p class="mt-5">
+    <div>
+        <section class="scroll-step stations">
+            <div class="scrolly" data-size="50">
+                <p class="mt-5 fw-bolder">
                     179th Street
                 </p>
                 <ul>
@@ -41,7 +41,7 @@
                             alt="" />
                     </a>
                 </p>
-                <p class="mt-5">
+                <p class="mt-5 fw-bolder">
                     169th Street
                 </p>
                 <ul>
@@ -65,7 +65,7 @@
                             alt="" />
                     </a>
                 </p>
-                <p class="mt-5">
+                <p class="mt-5 fw-bolder">
                     Parsons Blvd
                 </p>
                 <ul>
@@ -79,7 +79,7 @@
                             class="w-25 h-25 me-4" alt="" />
                     </a>
                 </p>
-                <p class="mt-5">
+                <p class="mt-5 fw-bolder">
                     Suthphin Blvd
                 </p>
                 <ul>
@@ -98,7 +98,7 @@
                             class="w-25 h-25 me-4" alt="" />
                     </a>
                 </p>
-                <p class="mt-5">
+                <p class="mt-5 fw-bolder">
                     Briarwood-Van Wyck Blvd
                 </p>
                 <ul>
@@ -117,7 +117,7 @@
                             class="w-25 h-25 me-4" alt="" />
                     </a>
                 </p>
-                <p class="mt-5">
+                <p class="mt-5 fw-bolder">
                     Kew Gardens-Union Tpke
                 </p>
                 <ul>
@@ -136,7 +136,7 @@
                             class="w-25 h-25 me-4" alt="" />
                     </a>
                 </p>
-                <p class="mt-5">
+                <p class="mt-5 fw-bolder">
                     75th Avenue
                 </p>
                 <ul>
@@ -149,7 +149,7 @@
                         <img src="https://live.staticflickr.com/3362/3454771416_a53a9d7bda_b.jpg" class="w-25 h-25 me-4" alt="" />
                     </a>
                 </p>
-                <p class="mt-5">
+                <p class="mt-5 fw-bolder">
                     71st Ave-Forest Hills
                 </p>
                 <ul>
@@ -182,7 +182,7 @@
                             class="w-25 h-25 me-4" alt="">
                     </a>
                 </p>
-                <p class="mt-5">
+                <p class="mt-5 fw-bolder">
                     Jackson Heights-Roosevelt Ave
                 </p>
                 <ul>
@@ -206,7 +206,7 @@
                             class="w-25 h-25 me-4" alt="">
                     </a>
                 </p>
-                <p class="mt-5">
+                <p class="mt-5 fw-bolder">
                     21st Street-Queensbridge
                 </p>
                 <ul>
@@ -234,7 +234,7 @@
                         <img src="https://media.timeout.com/images/105673461/image.jpg" class="w-25 h-25 me-4" alt="">
                     </a>
                 </p>
-                <p class="mt-5">
+                <p class="mt-5 fw-bolder">
                     Roosevelt Island
                 </p>
                 <ul>
@@ -258,7 +258,7 @@
                             class="w-25 h-25 me-4" alt="">
                     </a>
                 </p>
-                <p class="mt-5">
+                <p class="mt-5 fw-bolder">
                     Lexington Ave-63rd Street
                 </p>
                 <ul>
@@ -282,7 +282,7 @@
                             class="w-25 h-25 me-4" alt="">
                     </a>
                 </p>
-                <p class="mt-5">
+                <p class="mt-5 fw-bolder">
                     57th Street
                 </p>
                 <ul>
@@ -311,7 +311,7 @@
                             alt="">
                     </a>
                 </p>
-                <p class="mt-5">
+                <p class="mt-5 fw-bolder">
                     47-50th Street-Rockefeller Center
                 </p>
                 <ul>
@@ -335,7 +335,7 @@
                             class="w-25 h-25 me-4" alt="">
                     </a>
                 </p>
-                <p class="mt-5">
+                <p class="mt-5 fw-bolder">
                     42nd Street-Bryant Park
                 </p>
                 <ul>
@@ -359,7 +359,7 @@
                             class="w-25 h-25 me-4" alt="">
                     </a>
                 </p>
-                <p class="mt-5">
+                <p class="mt-5 fw-bolder">
                     34th Street-Herald Square
                 </p>
                 <ul>
@@ -388,7 +388,7 @@
     
 
     <main>
-        <div class="container mt-5">
+        <!-- <div class="container mt-5">
             <table class="mb-5 table-bordered text-wrap table-responsive">
                 <colgroup>
                     <col span="2" />
@@ -722,7 +722,7 @@
                     </td>
                 </tr>
             </table>
-        </div>
+        </div> -->
     </main>
 </body>
 <script src="https://unpkg.com/intersection-observer@0.5.1/intersection-observer.js"></script>
