got the scrolly telly to work but the image doesn't occupy the entire space
need to get the map to sit on top of the main image

--- a/expressive-web/index.html
+++ b/expressive-web/index.html
@@ -14,9 +14,8 @@
         <img src="images/F-train.jpg" class="train-pic" alt="">
         <img src="images/mtaftrain-edit-removebg-preview.png" class="train-path" alt="f-train path">
     </div>
-    <div>
-        <section class="scroll-step stations">
-            <div class="scrolly" data-size="50">
+    <div class="overlay-text scroll-step stations">
+        <section class="scrolly" data-size="50">
                 <p class="mt-5 fw-bolder">
                     179th Street
                 </p>
@@ -382,7 +381,6 @@
                             alt="">
                     </a>
                 </p>
-            </div>
         </section>
     </div>
     
