added 1 clip of station

--- a/expressive-web/index.html
+++ b/expressive-web/index.html
@@ -20,7 +20,7 @@
                     179th Street
                 </p>
                 <ul>
-                    <li class="sights">
+                    <li class="sights flex-wrap">
                         Major Mark Park
                         Detective Keith L. Williams Park
                         Cunningham Park
@@ -40,6 +40,11 @@
                             alt="" />
                     </a>
                 </p>
+                <iframe width="180" height="100"
+                    src="https://www.youtube.com/embed/0A7T5k84FeU?si=A0GIc9ZqungVAOj8&amp;clip=Ugkxiw7BlgavACamplTcWkZrbwsVgoXk-y_f&amp;clipt=EKyoBBjU7gQ"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    ></iframe>
                 <p class="mt-5 fw-bolder">
                     169th Street
                 </p>
@@ -64,6 +69,11 @@
                             alt="" />
                     </a>
                 </p>
+                <iframe width="560" height="315"
+                    src="https://www.youtube.com/embed/0A7T5k84FeU?si=HtxBHlccCztLrFq6&amp;clip=Ugkx-jXQWLZQyTFE0O1nwGvUxCm9xy0qytPg&amp;clipt=ELSBBRiksAU"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
                 <p class="mt-5 fw-bolder">
                     Parsons Blvd
                 </p>
